"""initial schema

Revision ID: cdce4647d1ec
Revises: 
Create Date: 2026-06-16 15:08:43.411472
"""
from alembic import op
import sqlalchemy as sa
import app.models.base


revision = 'cdce4647d1ec'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('permissions',
    sa.Column('code', sa.String(length=100), nullable=False),
    sa.Column('description', sa.String(length=255), nullable=True),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('permissions', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_permissions_code'), ['code'], unique=True)

    op.create_table('roles',
    sa.Column('name', sa.String(length=50), nullable=False),
    sa.Column('description', sa.String(length=255), nullable=True),
    sa.Column('is_system', sa.Boolean(), nullable=False),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('roles', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_roles_name'), ['name'], unique=True)

    op.create_table('role_permissions',
    sa.Column('role_id', app.models.base.GUID(), nullable=False),
    sa.Column('permission_id', app.models.base.GUID(), nullable=False),
    sa.ForeignKeyConstraint(['permission_id'], ['permissions.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['role_id'], ['roles.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('role_id', 'permission_id')
    )
    op.create_table('users',
    sa.Column('full_name', sa.String(length=150), nullable=False),
    sa.Column('email', sa.String(length=255), nullable=False),
    sa.Column('phone', sa.String(length=30), nullable=True),
    sa.Column('password_hash', sa.String(length=255), nullable=False),
    sa.Column('role_name', sa.Enum('candidate', 'recruiter', 'admin', name='user_role'), nullable=False),
    sa.Column('role_id', app.models.base.GUID(), nullable=True),
    sa.Column('status', sa.Enum('active', 'inactive', 'suspended', 'pending', name='user_status'), nullable=False),
    sa.Column('avatar_url', sa.String(length=512), nullable=True),
    sa.Column('email_verified', sa.Boolean(), nullable=False),
    sa.Column('email_verification_token', sa.String(length=255), nullable=True),
    sa.Column('email_verification_sent_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('password_reset_token', sa.String(length=255), nullable=True),
    sa.Column('password_reset_expires_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('mfa_enabled', sa.Boolean(), nullable=False),
    sa.Column('mfa_secret', sa.String(length=64), nullable=True),
    sa.Column('failed_login_attempts', sa.Integer(), nullable=False),
    sa.Column('locked_until', sa.DateTime(timezone=True), nullable=True),
    sa.Column('last_login_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('last_login_ip', sa.String(length=64), nullable=True),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['role_id'], ['roles.id'], ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('users', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_users_email'), ['email'], unique=True)
        batch_op.create_index(batch_op.f('ix_users_phone'), ['phone'], unique=False)
        batch_op.create_index(batch_op.f('ix_users_role_name'), ['role_name'], unique=False)
        batch_op.create_index(batch_op.f('ix_users_status'), ['status'], unique=False)

    op.create_table('assessments',
    sa.Column('title', sa.String(length=255), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('position', sa.String(length=150), nullable=True),
    sa.Column('recruiter_id', app.models.base.GUID(), nullable=False),
    sa.Column('duration_minutes', sa.Integer(), nullable=False),
    sa.Column('start_time', sa.DateTime(timezone=True), nullable=True),
    sa.Column('end_time', sa.DateTime(timezone=True), nullable=True),
    sa.Column('status', sa.Enum('draft', 'upcoming', 'active', 'completed', 'cancelled', name='assessment_status'), nullable=False),
    sa.Column('risk_threshold', sa.Float(), nullable=False),
    sa.Column('pass_mark', sa.Float(), nullable=False),
    sa.Column('shuffle_questions', sa.Boolean(), nullable=False),
    sa.Column('monitor_face_detection', sa.Boolean(), nullable=False),
    sa.Column('monitor_eye_tracking', sa.Boolean(), nullable=False),
    sa.Column('monitor_phone_detection', sa.Boolean(), nullable=False),
    sa.Column('monitor_tab_switch', sa.Boolean(), nullable=False),
    sa.Column('monitor_audio_detection', sa.Boolean(), nullable=False),
    sa.Column('monitor_suspicious_movement', sa.Boolean(), nullable=False),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['recruiter_id'], ['users.id'], ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('assessments', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_assessments_position'), ['position'], unique=False)
        batch_op.create_index(batch_op.f('ix_assessments_recruiter_id'), ['recruiter_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_assessments_status'), ['status'], unique=False)
        batch_op.create_index(batch_op.f('ix_assessments_title'), ['title'], unique=False)

    op.create_table('audit_logs',
    sa.Column('user_id', app.models.base.GUID(), nullable=True),
    sa.Column('user_name', sa.String(length=150), nullable=True),
    sa.Column('user_role', sa.Enum('candidate', 'recruiter', 'admin', name='audit_user_role'), nullable=True),
    sa.Column('action', sa.String(length=120), nullable=False),
    sa.Column('resource', sa.String(length=255), nullable=True),
    sa.Column('status', sa.Enum('success', 'failure', 'warning', name='audit_status'), nullable=False),
    sa.Column('ip_address', sa.String(length=64), nullable=True),
    sa.Column('user_agent', sa.String(length=512), nullable=True),
    sa.Column('details', sa.Text(), nullable=True),
    sa.Column('context', sa.JSON(), nullable=True),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('audit_logs', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_audit_logs_action'), ['action'], unique=False)
        batch_op.create_index(batch_op.f('ix_audit_logs_status'), ['status'], unique=False)
        batch_op.create_index(batch_op.f('ix_audit_logs_user_id'), ['user_id'], unique=False)

    op.create_table('candidate_profiles',
    sa.Column('user_id', app.models.base.GUID(), nullable=False),
    sa.Column('candidate_code', sa.String(length=40), nullable=False),
    sa.Column('department', sa.String(length=120), nullable=True),
    sa.Column('position', sa.String(length=120), nullable=True),
    sa.Column('experience_years', sa.Integer(), nullable=False),
    sa.Column('integrity_score', sa.Float(), nullable=False),
    sa.Column('total_assessments', sa.Integer(), nullable=False),
    sa.Column('passed_assessments', sa.Integer(), nullable=False),
    sa.Column('face_embedding', sa.String(), nullable=True),
    sa.Column('reference_photo_url', sa.String(length=512), nullable=True),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id')
    )
    with op.batch_alter_table('candidate_profiles', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_candidate_profiles_candidate_code'), ['candidate_code'], unique=True)

    op.create_table('notifications',
    sa.Column('user_id', app.models.base.GUID(), nullable=False),
    sa.Column('title', sa.String(length=255), nullable=False),
    sa.Column('message', sa.Text(), nullable=False),
    sa.Column('type', sa.Enum('info', 'warning', 'alert', 'success', name='notification_type'), nullable=False),
    sa.Column('read', sa.Boolean(), nullable=False),
    sa.Column('link', sa.String(length=512), nullable=True),
    sa.Column('delivered_email', sa.Boolean(), nullable=False),
    sa.Column('delivered_sms', sa.Boolean(), nullable=False),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('notifications', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_notifications_read'), ['read'], unique=False)
        batch_op.create_index(batch_op.f('ix_notifications_user_id'), ['user_id'], unique=False)

    op.create_table('recruiter_profiles',
    sa.Column('user_id', app.models.base.GUID(), nullable=False),
    sa.Column('recruiter_code', sa.String(length=40), nullable=False),
    sa.Column('department', sa.String(length=120), nullable=True),
    sa.Column('total_assessments_created', sa.Integer(), nullable=False),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id')
    )
    with op.batch_alter_table('recruiter_profiles', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_recruiter_profiles_recruiter_code'), ['recruiter_code'], unique=True)

    op.create_table('system_settings',
    sa.Column('key', sa.String(length=120), nullable=False),
    sa.Column('value', sa.JSON(), nullable=True),
    sa.Column('description', sa.String(length=255), nullable=True),
    sa.Column('updated_by', app.models.base.GUID(), nullable=True),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['updated_by'], ['users.id'], ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('system_settings', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_system_settings_key'), ['key'], unique=True)

    op.create_table('token_blocklist',
    sa.Column('jti', sa.String(length=64), nullable=False),
    sa.Column('token_type', sa.String(length=16), nullable=False),
    sa.Column('user_id', app.models.base.GUID(), nullable=True),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('token_blocklist', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_token_blocklist_jti'), ['jti'], unique=True)

    op.create_table('assessment_sessions',
    sa.Column('assessment_id', app.models.base.GUID(), nullable=False),
    sa.Column('candidate_id', app.models.base.GUID(), nullable=False),
    sa.Column('started_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('submitted_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('status', sa.Enum('in_progress', 'completed', 'abandoned', 'flagged', name='session_status'), nullable=False),
    sa.Column('score', sa.Float(), nullable=True),
    sa.Column('max_score', sa.Float(), nullable=False),
    sa.Column('percentage', sa.Float(), nullable=True),
    sa.Column('passed', sa.Boolean(), nullable=True),
    sa.Column('integrity_score', sa.Float(), nullable=False),
    sa.Column('risk_score', sa.Float(), nullable=False),
    sa.Column('risk_level', sa.Enum('low', 'medium', 'high', name='risk_level'), nullable=False),
    sa.Column('tab_switch_count', sa.Integer(), nullable=False),
    sa.Column('looking_away_count', sa.Integer(), nullable=False),
    sa.Column('face_not_detected_count', sa.Integer(), nullable=False),
    sa.Column('live_status', sa.JSON(), nullable=True),
    sa.Column('ip_address', sa.String(length=64), nullable=True),
    sa.Column('user_agent', sa.String(length=512), nullable=True),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['assessment_id'], ['assessments.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['candidate_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('assessment_sessions', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_assessment_sessions_assessment_id'), ['assessment_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_assessment_sessions_candidate_id'), ['candidate_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_assessment_sessions_risk_level'), ['risk_level'], unique=False)
        batch_op.create_index(batch_op.f('ix_assessment_sessions_status'), ['status'], unique=False)

    op.create_table('questions',
    sa.Column('assessment_id', app.models.base.GUID(), nullable=False),
    sa.Column('text', sa.Text(), nullable=False),
    sa.Column('type', sa.Enum('multiple_choice', 'true_false', 'short_answer', 'coding', name='question_type'), nullable=False),
    sa.Column('marks', sa.Float(), nullable=False),
    sa.Column('order', sa.Integer(), nullable=False),
    sa.Column('options', sa.JSON(), nullable=True),
    sa.Column('correct_answer', sa.Text(), nullable=True),
    sa.Column('language', sa.Enum('javascript', 'typescript', 'python', 'java', 'r', 'cpp', 'csharp', 'go', 'sql', name='coding_language'), nullable=True),
    sa.Column('languages', sa.JSON(), nullable=True),
    sa.Column('entry_point', sa.String(length=120), nullable=True),
    sa.Column('starter_code', sa.Text(), nullable=True),
    sa.Column('starter_codes', sa.JSON(), nullable=True),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['assessment_id'], ['assessments.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('questions', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_questions_assessment_id'), ['assessment_id'], unique=False)

    op.create_table('alerts',
    sa.Column('session_id', app.models.base.GUID(), nullable=False),
    sa.Column('assessment_id', app.models.base.GUID(), nullable=False),
    sa.Column('candidate_id', app.models.base.GUID(), nullable=False),
    sa.Column('type', sa.Enum('multiple_faces', 'phone_detected', 'looking_away', 'tab_switch', 'suspicious_movement', 'audio_detected', 'face_not_detected', 'identity_mismatch', 'browser_unfocused', 'object_detected', name='alert_type'), nullable=False),
    sa.Column('severity', sa.Enum('low', 'medium', 'high', 'critical', name='alert_severity'), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('risk_score', sa.Float(), nullable=False),
    sa.Column('occurred_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('reviewed', sa.Boolean(), nullable=False),
    sa.Column('reviewed_by', app.models.base.GUID(), nullable=True),
    sa.Column('reviewed_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('resolution_note', sa.Text(), nullable=True),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['assessment_id'], ['assessments.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['candidate_id'], ['users.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['reviewed_by'], ['users.id'], ondelete='SET NULL'),
    sa.ForeignKeyConstraint(['session_id'], ['assessment_sessions.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('alerts', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_alerts_assessment_id'), ['assessment_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_alerts_candidate_id'), ['candidate_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_alerts_occurred_at'), ['occurred_at'], unique=False)
        batch_op.create_index(batch_op.f('ix_alerts_reviewed'), ['reviewed'], unique=False)
        batch_op.create_index(batch_op.f('ix_alerts_session_id'), ['session_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_alerts_severity'), ['severity'], unique=False)
        batch_op.create_index(batch_op.f('ix_alerts_type'), ['type'], unique=False)

    op.create_table('answers',
    sa.Column('session_id', app.models.base.GUID(), nullable=False),
    sa.Column('question_id', app.models.base.GUID(), nullable=False),
    sa.Column('response', sa.Text(), nullable=True),
    sa.Column('selected_language', sa.String(length=30), nullable=True),
    sa.Column('is_correct', sa.Boolean(), nullable=True),
    sa.Column('awarded_marks', sa.Float(), nullable=False),
    sa.Column('test_results', sa.JSON(), nullable=True),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['question_id'], ['questions.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['session_id'], ['assessment_sessions.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('answers', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_answers_question_id'), ['question_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_answers_session_id'), ['session_id'], unique=False)

    op.create_table('integrity_events',
    sa.Column('session_id', app.models.base.GUID(), nullable=False),
    sa.Column('type', sa.Enum('multiple_faces', 'phone_detected', 'looking_away', 'tab_switch', 'suspicious_movement', 'audio_detected', 'face_not_detected', 'identity_mismatch', 'browser_unfocused', 'object_detected', name='integrity_event_type'), nullable=False),
    sa.Column('severity', sa.Enum('low', 'medium', 'high', 'critical', name='event_severity'), nullable=False),
    sa.Column('confidence', sa.Float(), nullable=False),
    sa.Column('risk_delta', sa.Float(), nullable=False),
    sa.Column('occurred_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('payload', sa.JSON(), nullable=True),
    sa.Column('processed', sa.Boolean(), nullable=False),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['session_id'], ['assessment_sessions.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('integrity_events', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_integrity_events_occurred_at'), ['occurred_at'], unique=False)
        batch_op.create_index(batch_op.f('ix_integrity_events_session_id'), ['session_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_integrity_events_type'), ['type'], unique=False)

    op.create_table('test_cases',
    sa.Column('question_id', app.models.base.GUID(), nullable=False),
    sa.Column('args', sa.JSON(), nullable=True),
    sa.Column('expected_output', sa.Text(), nullable=True),
    sa.Column('display', sa.String(length=255), nullable=True),
    sa.Column('hidden', sa.Boolean(), nullable=False),
    sa.Column('order', sa.Integer(), nullable=False),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['question_id'], ['questions.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('test_cases', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_test_cases_question_id'), ['question_id'], unique=False)

    op.create_table('evidence',
    sa.Column('session_id', app.models.base.GUID(), nullable=False),
    sa.Column('alert_id', app.models.base.GUID(), nullable=True),
    sa.Column('type', sa.Enum('screenshot', 'snapshot', 'video', 'audio', 'document', name='evidence_type'), nullable=False),
    sa.Column('storage_key', sa.String(length=512), nullable=False),
    sa.Column('url', sa.String(length=1024), nullable=True),
    sa.Column('content_type', sa.String(length=120), nullable=True),
    sa.Column('size_bytes', sa.Integer(), nullable=True),
    sa.Column('sha256', sa.String(length=64), nullable=True),
    sa.Column('captured_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('evidence_metadata', sa.JSON(), nullable=True),
    sa.Column('id', app.models.base.GUID(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['alert_id'], ['alerts.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['session_id'], ['assessment_sessions.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('evidence', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_evidence_alert_id'), ['alert_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_evidence_session_id'), ['session_id'], unique=False)

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('evidence', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_evidence_session_id'))
        batch_op.drop_index(batch_op.f('ix_evidence_alert_id'))

    op.drop_table('evidence')
    with op.batch_alter_table('test_cases', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_test_cases_question_id'))

    op.drop_table('test_cases')
    with op.batch_alter_table('integrity_events', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_integrity_events_type'))
        batch_op.drop_index(batch_op.f('ix_integrity_events_session_id'))
        batch_op.drop_index(batch_op.f('ix_integrity_events_occurred_at'))

    op.drop_table('integrity_events')
    with op.batch_alter_table('answers', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_answers_session_id'))
        batch_op.drop_index(batch_op.f('ix_answers_question_id'))

    op.drop_table('answers')
    with op.batch_alter_table('alerts', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_alerts_type'))
        batch_op.drop_index(batch_op.f('ix_alerts_severity'))
        batch_op.drop_index(batch_op.f('ix_alerts_session_id'))
        batch_op.drop_index(batch_op.f('ix_alerts_reviewed'))
        batch_op.drop_index(batch_op.f('ix_alerts_occurred_at'))
        batch_op.drop_index(batch_op.f('ix_alerts_candidate_id'))
        batch_op.drop_index(batch_op.f('ix_alerts_assessment_id'))

    op.drop_table('alerts')
    with op.batch_alter_table('questions', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_questions_assessment_id'))

    op.drop_table('questions')
    with op.batch_alter_table('assessment_sessions', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_assessment_sessions_status'))
        batch_op.drop_index(batch_op.f('ix_assessment_sessions_risk_level'))
        batch_op.drop_index(batch_op.f('ix_assessment_sessions_candidate_id'))
        batch_op.drop_index(batch_op.f('ix_assessment_sessions_assessment_id'))

    op.drop_table('assessment_sessions')
    with op.batch_alter_table('token_blocklist', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_token_blocklist_jti'))

    op.drop_table('token_blocklist')
    with op.batch_alter_table('system_settings', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_system_settings_key'))

    op.drop_table('system_settings')
    with op.batch_alter_table('recruiter_profiles', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_recruiter_profiles_recruiter_code'))

    op.drop_table('recruiter_profiles')
    with op.batch_alter_table('notifications', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_notifications_user_id'))
        batch_op.drop_index(batch_op.f('ix_notifications_read'))

    op.drop_table('notifications')
    with op.batch_alter_table('candidate_profiles', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_candidate_profiles_candidate_code'))

    op.drop_table('candidate_profiles')
    with op.batch_alter_table('audit_logs', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_audit_logs_user_id'))
        batch_op.drop_index(batch_op.f('ix_audit_logs_status'))
        batch_op.drop_index(batch_op.f('ix_audit_logs_action'))

    op.drop_table('audit_logs')
    with op.batch_alter_table('assessments', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_assessments_title'))
        batch_op.drop_index(batch_op.f('ix_assessments_status'))
        batch_op.drop_index(batch_op.f('ix_assessments_recruiter_id'))
        batch_op.drop_index(batch_op.f('ix_assessments_position'))

    op.drop_table('assessments')
    with op.batch_alter_table('users', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_users_status'))
        batch_op.drop_index(batch_op.f('ix_users_role_name'))
        batch_op.drop_index(batch_op.f('ix_users_phone'))
        batch_op.drop_index(batch_op.f('ix_users_email'))

    op.drop_table('users')
    op.drop_table('role_permissions')
    with op.batch_alter_table('roles', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_roles_name'))

    op.drop_table('roles')
    with op.batch_alter_table('permissions', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_permissions_code'))

    op.drop_table('permissions')
    # ### end Alembic commands ###
